Added text and photos for the invitation page. Added photos to the Location page. Yet to add text to the location page.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row pt-4">
     <div class="col-md-6 col-sm-12 text-center mx-auto">
-      <h2>Kevin & Erandhi</h2>
+      <h1 class="text-parisienne">Kevin & Erandhi</h1>
     </div>
   </div>
 
