--- a/src/app/invitation/invitation.component.html
+++ b/src/app/invitation/invitation.component.html
@@ -1,39 +1,49 @@
 <div class="row pt-4">
-    <img src="https://source.unsplash.com/random/512x426" 
-        alt="Kevin and Erandhi Enagement Photo" 
-        class="col-md-8 col-sm-12 img-fluid mx-auto d-block w-100">
+  <img
+    src="assets/images/CouplePhoto.JPG"
+    alt="Kevin and Erandhi Enagement Photo"
+    class="col-md-8 col-sm-12 img-fluid mx-auto d-block w-100"
+  />
 </div>
 <div class="row">
-    <div class="col-md-6 col-sm-12 mx-auto pt-4 mt-5 text-center">
-        <p>
-        With great pleasure!
-        </p>
-    </div>
+  <div
+    class="col-md-6 col-sm-12 mx-auto pt-3 text-center text-petit-formal"
+  >
+    <p>
+      With great pleasure
+    </p>
+  </div>
+</div>
+<div class="row mt-n2">
+  <div class="col-md-6 col-sm-12 mx-auto text-center text-parisienne">
+    <hr />
+    <p>
+      Erandhi Alokabandara
+      <br />
+      and
+      <br />
+      Kevin Exton
+    </p>
+    <hr />
+  </div>
 </div>
 <div class="row">
-    <div class="col-md-6 col-sm-12 mx-auto pt-1 text-center">
-        <hr>
-        <p>
-        Erandhi Alokabandara and Kevin Exton
-        </p>
-        <hr>
-    </div>
+  <div class="col-md-6 col-sm-12 mx-auto py-2 text-center text-petit-formal">
+    Would love to invite you to celebrate their wedding
+    <br />
+    on
+    <br />
+    Saturday the 18th of December, 2021
+    <br />
+    at
+    <br />
+    The Freycinet Lodge, Coles Bay, Tasmania, Australia
+    <!-- RSVP by date  -->
+    <!-- Hotel is giving a discount -->
+  </div>
 </div>
 <div class="row">
-    <div class="col-md-6 col-sm-12 mx-auto py-4 text-center">
-        Would love to invite you to celebrate their wedding 
-        <br>
-        on
-        <br>
-        Saturday the 18th of December, 2021
-        <br>
-        at the Freycinet Lodge, Coles Bay, Tasmania, Australia
-        <!-- RSVP by date  -->
-        <!-- Hotel is giving a discount -->
-    </div>
-</div>
-<div class="row">
-    <div class="col-md-6 col-sm-12 mx-auto py-4">
-        <hr>
-    </div>
+  <div class="col-md-6 col-sm-12 mx-auto py-4">
+    <hr />
+  </div>
 </div>
