--- a/src/app/location/location.component.html
+++ b/src/app/location/location.component.html
@@ -2,15 +2,19 @@
     <div class="col-md-8 col-sm-12 mx-auto pt-4">
         <mdb-carousel [animation]="'slide'" [interval]="'3000'">
             <mdb-carousel-item>
-                <img class="img-fluid mx-auto d-block w-100" src="https://source.unsplash.com/random/512x429"  alt="First slide">
+                <img class="img-fluid mx-auto d-block w-100 carousel-crop carousel-crop-sm" src="https://www.freycinetlodge.com.au/d/freycinetredesign/media/Freycinet0430.jpg"  alt="First slide">
                 <div class="mask rgba-black-slight waves-light" mdbWavesEffect></div>
             </mdb-carousel-item>
             <mdb-carousel-item>
-                <img class="img-fluid mx-auto d-block w-100" src="https://source.unsplash.com/random/512x427"  alt="Second slide">
+                <img class="img-fluid mx-auto d-block w-100 carousel-crop carousel-crop-sm" src="https://www.freycinetlodge.com.au/d/freycinetredesign/media/FLD_Deck-1.jpg"  alt="Second slide">
                 <div class="mask rgba-black-slight waves-light" mdbWavesEffect></div>
             </mdb-carousel-item>
             <mdb-carousel-item>
-                <img class="img-fluid mx-auto d-block w-100" src="https://source.unsplash.com/random/512x428"  alt="Third slide">
+                <img class="img-fluid mx-auto d-block w-100 carousel-crop carousel-crop-sm" src="https://www.freycinetlodge.com.au/d/freycinetredesign/media/FLLodgeExterior02.jpg"  alt="Third slide">
+                <div class="mask rgba-black-slight waves-light" mdbWavesEffect></div>
+            </mdb-carousel-item>
+            <mdb-carousel-item>
+                <img class="img-fluid mx-auto d-block w-100 carousel-crop carousel-crop-sm" src="https://www.freycinetlodge.com.au/d/freycinetredesign/media/FL-Honeymoon-Bay-01.jpg"  alt="Third slide">
                 <div class="mask rgba-black-slight waves-light" mdbWavesEffect></div>
             </mdb-carousel-item>
         </mdb-carousel>
