Added text describing the Freycinet lodge and linking to the Freycinet lodge website, also fixed the capitalisation of Erandhi's name while I was at it in the website title

--- a/src/app/location/location.component.html
+++ b/src/app/location/location.component.html
@@ -1,48 +1,84 @@
 <div class="row mt-3">
-    <div class="col-md-8 col-sm-12 mx-auto pt-4">
-        <mdb-carousel [animation]="'slide'" [interval]="'3000'">
-            <mdb-carousel-item>
-                <img class="img-fluid mx-auto d-block w-100 carousel-crop carousel-crop-sm" src="https://www.freycinetlodge.com.au/d/freycinetredesign/media/Freycinet0430.jpg"  alt="First slide">
-                <div class="mask rgba-black-slight waves-light" mdbWavesEffect></div>
-            </mdb-carousel-item>
-            <mdb-carousel-item>
-                <img class="img-fluid mx-auto d-block w-100 carousel-crop carousel-crop-sm" src="https://www.freycinetlodge.com.au/d/freycinetredesign/media/FLD_Deck-1.jpg"  alt="Second slide">
-                <div class="mask rgba-black-slight waves-light" mdbWavesEffect></div>
-            </mdb-carousel-item>
-            <mdb-carousel-item>
-                <img class="img-fluid mx-auto d-block w-100 carousel-crop carousel-crop-sm" src="https://www.freycinetlodge.com.au/d/freycinetredesign/media/FLLodgeExterior02.jpg"  alt="Third slide">
-                <div class="mask rgba-black-slight waves-light" mdbWavesEffect></div>
-            </mdb-carousel-item>
-            <mdb-carousel-item>
-                <img class="img-fluid mx-auto d-block w-100 carousel-crop carousel-crop-sm" src="https://www.freycinetlodge.com.au/d/freycinetredesign/media/FL-Honeymoon-Bay-01.jpg"  alt="Third slide">
-                <div class="mask rgba-black-slight waves-light" mdbWavesEffect></div>
-            </mdb-carousel-item>
-        </mdb-carousel>
-    </div>
+  <div class="col-md-8 col-sm-12 mx-auto pt-4">
+    <mdb-carousel [animation]="'slide'" [interval]="'3000'">
+      <mdb-carousel-item>
+        <img
+          class="img-fluid mx-auto d-block w-100 carousel-crop carousel-crop-sm carousel-crop-xs"
+          src="https://www.freycinetlodge.com.au/d/freycinetredesign/media/Freycinet0430.jpg"
+          alt="First slide"
+        />
+        <div class="mask rgba-black-slight waves-light" mdbWavesEffect></div>
+      </mdb-carousel-item>
+      <mdb-carousel-item>
+        <img
+          class="img-fluid mx-auto d-block w-100 carousel-crop carousel-crop-sm carousel-crop-xs"
+          src="https://www.freycinetlodge.com.au/d/freycinetredesign/media/FLD_Deck-1.jpg"
+          alt="Second slide"
+        />
+        <div class="mask rgba-black-slight waves-light" mdbWavesEffect></div>
+      </mdb-carousel-item>
+      <mdb-carousel-item>
+        <img
+          class="img-fluid mx-auto d-block w-100 carousel-crop carousel-crop-sm carousel-crop-xs"
+          src="https://www.freycinetlodge.com.au/d/freycinetredesign/media/FLLodgeExterior02.jpg"
+          alt="Third slide"
+        />
+        <div class="mask rgba-black-slight waves-light" mdbWavesEffect></div>
+      </mdb-carousel-item>
+      <mdb-carousel-item>
+        <img
+          class="img-fluid mx-auto d-block w-100 carousel-crop carousel-crop-sm carousel-crop-xs"
+          src="https://www.freycinetlodge.com.au/d/freycinetredesign/media/FL-Honeymoon-Bay-01.jpg"
+          alt="Third slide"
+        />
+        <div class="mask rgba-black-slight waves-light" mdbWavesEffect></div>
+      </mdb-carousel-item>
+    </mdb-carousel>
+  </div>
 </div>
 <div class="row">
-    <div class="col-md-6 col-sm-12 mx-auto pt-4 text-center">
-        <p>
-        Freycinet Lodge
-        </p>
-    </div>
+  <div class="col-md-6 col-sm-12 mx-auto pt-4 text-center text-petit-formal">
+    <p>
+      Freycinet Lodge
+    </p>
+  </div>
 </div>
 <div class="row">
-    <div class="col-md-6 col-sm-12 mx-auto pb-5">
-        <hr>
-    </div>    
+  <div class="col-md-6 col-sm-12 mx-auto pb-5">
+    <hr />
+  </div>
 </div>
 <div class="row">
-    <div class="col-md-6 col-sm-12 mx-auto">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit quidem magni 
-        accusantium ea architecto quae ullam necessitatibus. Quo necessitatibus dolores 
-        quisquam, molestiae nam sed nobis nisi aspernatur! Ducimus corporis obcaecati minima 
-        error nobis dolores optio aperiam vero debitis at hic deleniti ex necessitatibus 
-        repudiandae commodi, itaque unde aspernatur, rem aliquam!
-    </div>
+  <div class="col-md-6 col-sm-12 mx-auto">
+    <blockquote class="blockquote text-grey">
+      <p class="mb-0 text-petit-formal-small">
+        Overlooking the blue waters of Great Oyster Bay and with the rugged
+        Hazards mountain range as your backdrop, the location of Freycinet
+        Lodge's accommodation in Freycinet National Park is second to none.
+      </p>
+    </blockquote>
+
+    <p style="font-size: 1.5rem">
+      Freycinet Lodge is a beautiful lodge located just past Coles Bay,
+      Tasmania. The lodge has offered a discount to any guest of ours that
+      chooses to stay in the accomodation the lodge offers. If you're from
+      outside of Tasmania we recommend staying at the lodge.
+    </p>
+
+    <p style="font-size: 1.5rem" class="mt-5">
+      To explore the lodges offerings
+      <a
+        class="btn btn-info text-light"
+        target="_blank"
+        rel="noopener noreferrer"
+        href="https://www.freycinetlodge.com.au/"
+        >Click here</a
+      >
+    </p>
+  </div>
 </div>
 <div class="row">
-    <div class="col-md-6 col-sm-12 mx-auto py-5">
-        <hr>
-    </div>
+  <div class="col-md-6 col-sm-12 mx-auto py-5">
+    <hr />
+  </div>
 </div>
