--- a/src/app/location/location.component.scss
+++ b/src/app/location/location.component.scss
@@ -1,32 +1,62 @@
 .animated {
-    -webkit-animation-duration: 1s;
-    animation-duration: 1s;
-    -webkit-animation-fill-mode: both;
-    animation-fill-mode: both;
- }
- @-webkit-keyframes fadeIn {
-   0% {opacity: 0;}
-   100% {opacity: 1;}
- }
- @keyframes fadeIn {
-   0% {opacity: 0;}
-   100% {opacity: 1;}
- }
- .fadeIn {
-   -webkit-animation-name: fadeIn;
-   animation-name: fadeIn;
- }
- 
- @media (min-width: 768px){
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.fadeIn {
+  -webkit-animation-name: fadeIn;
+  animation-name: fadeIn;
+}
+
+.text-parisienne {
+  font-family: "Parisienne", cursive;
+  font-size: 2.2rem;
+}
+
+.text-petit-formal {
+  font-family: "Petit Formal Script", cursive;
+  font-size: 1.3rem;
+}
+
+.text-petit-formal-small {
+  font-family: "Petit Formal Script", cursive;
+  font-size: 1.2rem;
+}
+
+@media (min-width: 820px) {
   .carousel-crop {
     max-height: 480px;
     overflow: hidden;
   }
- }
+}
 
- @media all and (max-width: 765px) and (min-width: 1px) {
+@media all and (max-width: 819px) and (min-width: 421px) {
   .carousel-crop-sm {
-    max-height: 250px;
+    max-height: 300px;
+    overflow: hidden;
+  }
+}
+
+@media all and (max-width: 420px) and (min-width: 1px) {
+  .carousel-crop-xs {
+    max-height: 220px;
     overflow: hidden;
   }
 }
