--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Parisienne&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Petit+Formal+Script&display=swap');
 .text-parisienne {
     font-family: 'Parisienne', cursive;
 }
