--- a/src/app/invitation/invitation.component.scss
+++ b/src/app/invitation/invitation.component.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Parisienne&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Petit+Formal+Script&display=swap');
+
 .text-large {
     font-size: 1.3rem;
 }
