--- a/src/app/location/location.component.scss
+++ b/src/app/location/location.component.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Parisienne&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Petit+Formal+Script&display=swap');
+
 .animated {
   -webkit-animation-duration: 1s;
   animation-duration: 1s;
