--- a/src/app/rsvp/rsvp.component.scss
+++ b/src/app/rsvp/rsvp.component.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Parisienne&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Petit+Formal+Script&display=swap');
+
 input.ng-invalid.ng-touched {
     border: 1px solid red;
 }
