Moved the column class out of the img and into a div in the invitation component. Although Firefox understands that I want the image to be styled as a column. Chrome demands that the column is styled as a separate parent element.

--- a/src/app/invitation/invitation.component.html
+++ b/src/app/invitation/invitation.component.html
@@ -1,14 +1,14 @@
 <div class="row pt-4">
-  <img
-    src="assets/images/CouplePhoto.JPG"
-    alt="Kevin and Erandhi Enagement Photo"
-    class="col-md-8 col-sm-12 img-fluid mx-auto d-block w-100"
-  />
+  <div class="col-md-8 col-sm-12 mx-auto">
+    <img
+      src="assets/images/CouplePhoto.JPG"
+      alt="Kevin and Erandhi Enagement Photo"
+      class="img-fluid w-100 d-block"
+    />
+  </div>
 </div>
 <div class="row">
-  <div
-    class="col-md-6 col-sm-12 mx-auto pt-3 text-center text-petit-formal"
-  >
+  <div class="col-md-6 col-sm-12 mx-auto pt-3 text-center text-petit-formal">
     <p>
       With great pleasure
     </p>
