--- a/src/app/invitation/invitation.component.html
+++ b/src/app/invitation/invitation.component.html
@@ -10,7 +10,7 @@
 <div class="row">
   <div class="col-md-6 col-sm-12 mx-auto pt-3 text-center text-petit-formal">
     <p>
-      With great pleasure
+      Kindly join us for the wedding of
     </p>
   </div>
 </div>
@@ -29,8 +29,6 @@
 </div>
 <div class="row">
   <div class="col-md-6 col-sm-12 mx-auto py-2 text-center text-petit-formal">
-    Would love to invite you to celebrate their wedding
-    <br />
     on
     <br />
     Saturday the 18th of December, 2021
