--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,6 +29,18 @@
                   </li>
                   <li class="nav-item" 
                     routerLinkActive="active"
+                    [routerLinkActiveOptions]="{exact: true}"
+                    #rlaAttire="routerLinkActive"
+                  >
+                    <a class="nav-link waves-dark" mdbWavesEffect routerLink="/attire">
+                      Attire
+                      <span class="sr-only">
+                      {{ rlaAttire.isActive ? '(current)' : ''}}
+                      </span>
+                    </a>
+                  </li>
+                  <li class="nav-item" 
+                    routerLinkActive="active"
                     #rlaLocation="routerLinkActive">
                     <a class="nav-link waves-dark" mdbWavesEffect routerLink="/location">
                       Location 
