Fixed an issue where the emails were not displaying without the guest RSVP'ing

--- a/src/app/invitations/invitations.component.html
+++ b/src/app/invitations/invitations.component.html
@@ -38,7 +38,7 @@
               <td>{{ guest.isAttending }}</td>
               <td>{{ guest.isAttending ? guest.dietaryRequirements : "" }}</td>
               <td>{{ guest.isAttending ? guest.children : "" }}</td>
-              <td>{{ guest.isAttending ? guest.email : "" }}</td>
+              <td>{{ guest.email }}</td>
               <td>{{ guest.isAttending ? guest.willDance : "" }}</td>
             </tr>
           </tbody>
