--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,39 +36,6 @@
             <li
               class="nav-item"
               routerLinkActive="active"
-              [routerLinkActiveOptions]="{ exact: true }"
-              #rlaAttire="routerLinkActive"
-            >
-              <a
-                class="nav-link waves-dark"
-                mdbWavesEffect
-                routerLink="/attire"
-              >
-                Attire
-                <span class="sr-only">
-                  {{ rlaAttire.isActive ? "(current)" : "" }}
-                </span>
-              </a>
-            </li>
-            <li
-              class="nav-item"
-              routerLinkActive="active"
-              #rlaLocation="routerLinkActive"
-            >
-              <a
-                class="nav-link waves-dark"
-                mdbWavesEffect
-                routerLink="/location"
-              >
-                Location
-                <span class="sr-only">
-                  {{ rlaLocation.isActive ? "(current)" : "" }}
-                </span>
-              </a>
-            </li>
-            <li
-              class="nav-item"
-              routerLinkActive="active"
               #rlaLocation="routerLinkActive"
             >
               <a class="nav-link waves-dark" mdbWavesEffect routerLink="/rsvp">
@@ -83,10 +50,32 @@
               routerLinkActive="active"
               #rlaLocation="routerLinkActive"
             >
-              <a class="nav-link waves-dark" mdbWavesEffect routerLink="/bookings">
+              <a
+                class="nav-link waves-dark"
+                mdbWavesEffect
+                routerLink="/bookings"
+              >
                 Book A Cabin
                 <span class="sr-only">
                   {{ rlaLocation.isActive ? "(current)" : "" }}
+                </span>
+              </a>
+            </li>
+
+            <li
+              class="nav-item"
+              routerLinkActive="active"
+              [routerLinkActiveOptions]="{ exact: true }"
+              #rlaAttire="routerLinkActive"
+            >
+              <a
+                class="nav-link waves-dark"
+                mdbWavesEffect
+                routerLink="/attire"
+              >
+                Attire
+                <span class="sr-only">
+                  {{ rlaAttire.isActive ? "(current)" : "" }}
                 </span>
               </a>
             </li>
