--- a/src/app/bookings/bookings.component.scss
+++ b/src/app/bookings/bookings.component.scss
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Parisienne&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Petit+Formal+Script&display=swap');
+
+
 .text-parisienne {
   font-family: "Parisienne", cursive;
   font-size: 2.2rem;
@@ -11,4 +15,25 @@
 .text-petit-formal-small {
   font-family: "Petit Formal Script", cursive;
   font-size: 1.2rem;
+}
+
+@media (min-width: 820px) {
+  .carousel-crop {
+    max-height: 480px;
+    overflow: hidden;
+  }
+}
+
+@media all and (max-width: 819px) and (min-width: 421px) {
+  .carousel-crop-sm {
+    max-height: 300px;
+    overflow: hidden;
+  }
+}
+
+@media all and (max-width: 420px) and (min-width: 1px) {
+  .carousel-crop-xs {
+    max-height: 220px;
+    overflow: hidden;
+  }
 }
