made a change to the photo format, but more importantly migrated my development environment to a local VM

--- a/src/app/invitation/invitation.component.html
+++ b/src/app/invitation/invitation.component.html
@@ -1,7 +1,7 @@
 <div class="row pt-4">
   <div class="col-md-8 col-sm-12 mx-auto">
     <img
-      src="assets/images/CouplePhoto.JPG"
+      src="assets/images/CouplePhoto.jp2"
       alt="Kevin and Erandhi Enagement Photo"
       class="img-fluid w-100 d-block"
     />
