--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,53 +8,35 @@
   <div class="row">
     <div class="col-md-6 col-sm-12 mx-auto">
       <!--Navbar-->
-      <mdb-navbar
-        SideClass="navbar navbar-expand-lg navbar-light bg-light z-depth-0"
-        [containerInside]="false"
-      >
+      <mdb-navbar SideClass="navbar navbar-expand-lg navbar-light bg-light z-depth-0" [containerInside]="false">
+        <span style="display: inline-block; padding: 0.75rem"></span>
         <!-- Navbar brand -->
-        <mdb-navbar-brand
-          ><span style="padding: 0.01rem"></span
-        ></mdb-navbar-brand>
+        <mdb-navbar-brand class="p-none" style="display: none">
+          <a href="#" class="navbar-brand"></a>
+        </mdb-navbar-brand>
         <!-- Collapsible content -->
-        <links class="my-n2">
+        <links class="my-n2 p-none">
           <!-- Links -->
           <ul class="navbar-nav mx-auto">
-            <li
-              class="nav-item"
-              routerLinkActive="active"
-              [routerLinkActiveOptions]="{ exact: true }"
-              #rlaInvitation="routerLinkActive"
-            >
-              <a class="nav-link waves-dark" mdbWavesEffect routerLink="/">
+            <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"
+              #rlaInvitation="routerLinkActive">
+              <a class="nav-link waves-dark" routerLink="/">
                 Invitation
                 <span class="sr-only">
                   {{ rlaInvitation.isActive ? "(current)" : "" }}
                 </span>
               </a>
             </li>
-            <li
-              class="nav-item"
-              routerLinkActive="active"
-              #rlaLocation="routerLinkActive"
-            >
-              <a class="nav-link waves-dark" mdbWavesEffect routerLink="/rsvp">
+            <li class="nav-item" routerLinkActive="active" #rlaLocation="routerLinkActive">
+              <a class="nav-link waves-dark" routerLink="/rsvp">
                 RSVP
                 <span class="sr-only">
                   {{ rlaLocation.isActive ? "(current)" : "" }}
                 </span>
               </a>
             </li>
-            <li
-              class="nav-item"
-              routerLinkActive="active"
-              #rlaLocation="routerLinkActive"
-            >
-              <a
-                class="nav-link waves-dark"
-                mdbWavesEffect
-                routerLink="/bookings"
-              >
+            <li class="nav-item" routerLinkActive="active" #rlaLocation="routerLinkActive">
+              <a class="nav-link waves-dark" routerLink="/bookings">
                 Book A Cabin
                 <span class="sr-only">
                   {{ rlaLocation.isActive ? "(current)" : "" }}
@@ -62,17 +44,9 @@
               </a>
             </li>
 
-            <li
-              class="nav-item"
-              routerLinkActive="active"
-              [routerLinkActiveOptions]="{ exact: true }"
-              #rlaAttire="routerLinkActive"
-            >
-              <a
-                class="nav-link waves-dark"
-                mdbWavesEffect
-                routerLink="/attire"
-              >
+            <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"
+              #rlaAttire="routerLinkActive">
+              <a class="nav-link waves-dark" routerLink="/attire">
                 Attire
                 <span class="sr-only">
                   {{ rlaAttire.isActive ? "(current)" : "" }}
