made some minor changes to add and remove so that they create deep copies instead of in place updates. As well as upgraded ts-lint, that seemed to fix the impure pipe not working problem

--- a/src/app/invitations/invitations.component.html
+++ b/src/app/invitations/invitations.component.html
@@ -23,7 +23,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr mdbTableCol *ngFor="let guest of guests | guestFilter:searchString">
+            <tr mdbTableCol *ngFor="let guest of (guests | guestFilter:searchString)">
               <td>{{ guest.id }}</td>
               <td>{{ guest.name }}</td>
               <td><button type="button" mdbBtn color="info" class="relative waves-light"
