Added a page for gifts.

--- a/src/app/gifts/gifts.component.html
+++ b/src/app/gifts/gifts.component.html
@@ -12,7 +12,7 @@
 </div>
 <div class="row">
     <div class="col-md-8 col-sm-12 mx-auto pb-4">
-        <p class="mt-3 text-petit-formal">
+        <p class="mt-3 text-petit-formal" style="font-size: 1.6rem">
             We kindly request no physical items for a gift. We really appreciate everyone's generosity
             but many people are travelling from overseas which may make bringing physical gifts challenging.
             If you wish to give celebrate our wedding with gift giving, we are accepting money.
@@ -23,8 +23,9 @@
     <div class="col-md-6 col-sm-12 mx-auto">
         <mdb-card>
             <!--Card image-->
-            <mdb-card-img src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(97).jpg"
-                alt="Card image cap"></mdb-card-img>
+            <mdb-card-img src="assets/images/CoupleMuseum.webp"
+                alt="Couple Photo">
+            </mdb-card-img>
             <!--Card content-->
             <mdb-card-body class="mx-auto">
                 <a href="https://paypal.me/kcexn" mdbBtn color="primary" mdbWavesEffect>Send us a gift</a>
