deindexed from google search

--- a/src/app/gifts/gifts.component.html
+++ b/src/app/gifts/gifts.component.html
@@ -15,7 +15,8 @@
         <p class="mt-3 text-petit-formal" style="font-size: 1.6rem">
             We kindly request no physical items for a gift. We really appreciate everyone's generosity
             but many people are travelling from overseas which may make bringing physical gifts challenging.
-            If you wish to give celebrate our wedding with gift giving, we are accepting money.
+            If you wish to celebrate our wedding with gift giving, we are grateful for monetary contributions
+            towards our honeymoon.
         </p>
     </div>
 </div>
